%% ProductivityTracker - SRS Diagram Definitions
%% Use these Mermaid diagrams directly in SRS documentation or Mermaid-compatible editors.

%% 1. Context Diagram / Level 0 DFD
```mermaid
graph LR
    User[External User]
    Browser[Web Browser]
    System[ProductivityTracker System]
    Database[ProductivityTracker Database]
    Email[Email Service]

    User -->|Uses application| Browser
    Browser -->|Sends requests| System
    System -->|Reads / writes user, task, habit data| Database
    System -->|Sends verification and alerts| Email
    Email -->|Delivers messages| User
```

%% 2. Level 1 DFD
```mermaid
graph LR
    subgraph "External Entities"
        User[User]
        Email[Email Service]
    end

    subgraph "Processes"
        P1[1.0 User Management]
        P2[2.0 Task Management]
        P3[3.0 Habit & Activity Management]
        P4[4.0 Analytics & Reporting]
        P5[5.0 Notification Service]
    end

    subgraph "Data Stores"
        D1[(User Data Store)]
        D2[(Task Data Store)]
        D3[(Habit & Activity Data Store)]
        D4[(Analytics Data Store)]
    end

    User -->|Login / register / profile| P1
    User -->|Create / update / complete task| P2
    User -->|Track habit / log activity| P3
    User -->|View dashboards / reports| P4
    P1 -->|User credentials / profile| D1
    P2 -->|Task metadata / status| D2
    P3 -->|Habit records / activity logs| D3
    P4 -->|Read aggregated data| D1
    P4 -->|Read aggregated data| D2
    P4 -->|Read aggregated data| D3
    P4 -->|Store computed metrics| D4
    P1 -->|Trigger email verification| P5
    P2 -->|Trigger reminders / updates| P5
    P3 -->|Trigger habit reminders| P5
    P5 -->|Send email notifications| Email
    D1 -->|User data| P1
    D2 -->|Task data| P2
    D3 -->|Habit/activity data| P3
    D4 -->|Analytics results| P4
```

%% 3. Level 2 DFD: Task Creation Process
```mermaid
flowchart TB
    User[User]
    Browser[Task Creation UI]
    Validate[2.1 Input Validation]
    SaveTask[2.2 Save Task]
    TaskDB[(Task Data Store)]
    Reminder[2.3 Schedule Reminder]
    Confirmation[2.4 Confirmation Response]

    User -->|Enters task details| Browser
    Browser -->|Submit task request| Validate
    Validate -->|Valid| SaveTask
    Validate -->|Invalid| Browser
    SaveTask -->|Insert task row| TaskDB
    SaveTask --> Reminder
    Reminder -->|Creates reminder entry| TaskDB
    SaveTask --> Confirmation
    Confirmation -->|Success response| Browser
    Browser -->|Show success message| User
```

%% 4. Level 2 DFD: Authentication Process
```mermaid
flowchart TB
    User[User]
    Browser[Login / Registration UI]
    AuthValidate[1.1 Validate Credentials]
    AuthService[1.2 Authentication Service]
    UserDB[(User Data Store)]
    EmailNotify[1.3 Email Verification / Reset]
    AuthResponse[1.4 Auth Response]

    User -->|Enter login/register| Browser
    Browser -->|Send credentials| AuthValidate
    AuthValidate -->|Valid credentials| AuthService
    AuthValidate -->|Invalid input| Browser
    AuthService -->|Query user record| UserDB
    UserDB --> AuthService
    AuthService -->|Generate session / token| AuthResponse
    AuthService --> EmailNotify
    AuthResponse --> Browser
    Browser -->|Show login result| User
```

%% 5. Database Entity-Relationship Diagram
```mermaid
erDiagram
    USERS ||--o{ USER_SETTINGS : has
    USERS ||--o{ PASSWORD_RESET_TOKENS : requests
    USERS ||--o{ EMAIL_VERIFICATION_TOKENS : verifies
    USERS ||--o{ REMEMBER_ME_TOKENS : uses
    USERS ||--o{ SECURITY_EVENTS : logs
    USERS ||--o{ TASKS : owns
    USERS ||--o{ HABITS : owns
    USERS ||--o{ ACTIVITIES : logs
    USERS ||--o{ JOURNAL_ENTRIES : writes
    USERS ||--o{ TIME_LOGS : records
    USERS ||--o{ POMODORO_SESSIONS : completes
    USERS ||--o{ GOALS : sets
    USERS ||--o{ USER_ACHIEVEMENTS : earns
    USERS ||--o{ REMINDERS : schedules
    TASKS ||--o{ TASK_SUBTASKS : contains
    HABITS ||--o{ HABIT_STREAKS : maintains
    HABITS ||--o{ HABIT_COMPLETION_LOG : records
    HABITS ||--o{ HABIT_TAG_MAP : uses
    HABIT_TAGS ||--o{ HABIT_TAG_MAP : maps

    USERS {
        int id PK
        varchar name
        varchar email UK
        boolean email_verified
    }
    TASKS {
        int id PK
        int user_id FK
        varchar name
        varchar status
        date due_date
    }
    HABITS {
        int id PK
        int user_id FK
        varchar name
        varchar frequency
        int streak
    }
    ACTIVITIES {
        int id PK
        int user_id FK
        varchar name
        int duration
    }
```

%% 6. Task Creation Sequence Diagram
```mermaid
sequenceDiagram
    participant User
    participant Browser
    participant Server
    participant Database

    User->>Browser: Click 'Create Task'
    Browser->>Server: POST /tasks
    Server->>Server: Validate input
    alt valid
        Server->>Database: INSERT task record
        Database-->>Server: Task created
        Server-->>Browser: 201 Created
        Browser-->>User: Show success message
    else invalid
        Server-->>Browser: 400 Validation error
        Browser-->>User: Show validation message
    end
```

%% 7. Project Schedule Timeline
```mermaid
gantt
    title ProductivityTracker Development Schedule
    dateFormat  YYYY-MM-DD
    section Planning
    Requirements Gathering :done, req, 2024-01-01, 2024-01-08
    Architecture Design :done, arch, 2024-01-09, 2024-01-15
    section Development
    Backend Core :done, backend, 2024-01-16, 2024-02-15
    Frontend UX :done, frontend, 2024-02-16, 2024-03-15
    Integration & Testing :done, testing, 2024-03-16, 2024-04-10
    section Deployment
    Production Release :done, release, 2024-04-11, 2024-04-20
```

%% 8. Quality Assurance Distribution
```mermaid
pie title Test Coverage by Type
    "Unit Tests" : 60
    "Integration Tests" : 20
    "E2E Tests" : 10
    "Smoke Tests" : 10
```
101
